MOZ_v2: fix scrollbars on main page

--- a/src/pages/HomePage/Sidebar/Sidebar.module.scss
+++ b/src/pages/HomePage/Sidebar/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .container {
-  height: calc(100vh - 103px);
+  height: calc(100vh - 105px);
   margin: 4px 16px 4px 0;
 }
 
